# kalai

./: .gitignore  Makefile  README.md  build.sh  deps.edn  foo.java  project.clj  sync.sh
.github/workflows/: clojure.yml
data_diff/: Makefile  README.md
data_diff/rust/: Cargo.toml
data_diff/rust/src/: lib.rs
data_diff/rust/src/data_diff/: core.rs  examples.rs
data_diff/rust/src/kalai/: kalai.rs
data_diff/rust/src_bin/: main.rs
data_diff/src/data_diff/: core.clj  examples.clj
data_diff/test/data_diff/: core_test.clj
dev/: build.clj
docs/: Contributing.md  Design.md  Rationale.md  Syntax.md  TODO.md
examples/: Makefile  README.md  build.gradle  deps.edn
examples/a/: demo01.clj  demo02.clj
examples/b/: loop.clj  simple.clj  varibles.clj
examples/java/: build.gradle
examples/rust/: Cargo.toml
examples/rust/src/: kalai.rs  lib.rs
examples/rust/src/a/: demo_01.rs  demo_02.rs  demo_03.rs  demo_04.rs  mod.rs
examples/rust/src/b/: higher_order_function.rs  loop.rs  loops.rs  mod.rs  required.rs  requirer.rs  simple.rs  type_alias.rs  variable.rs
examples/rust/src/c/: conj_as_function.rs  mod.rs  persistent.rs
examples/rust/src/kalai/: kalai.rs  mod.rs
examples/rust/src_bin/: main.rs
examples/src/a/: demo01.clj  demo02.clj  demo03.clj  demo04.clj
examples/src/b/: higher_order_function.clj  loops.clj  requirer.clj  simple.clj  type_alias.clj  variable.clj
examples/src/c/: conj_as_function.clj  persistent.clj
examples/test/a/: demo02_logic_test.clj
resources/java/: Kalai.java
resources/rust/: kalai.rs
sql_builder/: Makefile  README.md
sql_builder/java/: build.gradle
sql_builder/rust/: Cargo.toml
sql_builder/rust/src/: kalai.rs  lib.rs  mod.rs  traitobjs.rs
sql_builder/rust/src/b/: kalai.rs
sql_builder/rust/src/kalai/: kalai.rs
sql_builder/rust/src/sql_builder/: core.rs  examples.rs  mod.rs
sql_builder/rust/src_bin/: main.rs
sql_builder/src/sql_builder/: core.clj  examples.clj
sql_builder/test/sql_builder/: core_test.clj
src/clj_icu_test/: common.clj  core.clj  cpp.clj  demo.clj  java.clj  testing.clj
src/clj_icu_test/demo/: demo01.clj  demo02.clj
src/clj_icu_test/emit/: api.clj  interface.clj  langs.clj  util.clj
src/kalai/: common.clj  compile.clj  core.clj  normalize.clj  testing.clj  types.clj  util.clj
src/kalai/demo/: demo01.clj  demo02.clj
src/kalai/emit/: api.clj  interface.clj  langs.clj  util.clj
src/kalai/exec/: kalai_to_language.clj  language_compilers.clj  main.clj
src/kalai/pass/: README.md  a_analyze.clj  a_annotate_ast.clj  analyze.clj  ast_patterns.clj  b_kalai_ast.clj  b_kalai_constructs.clj  breturn.clj  c_annotate_return.clj  c_flatten_groups.clj  d1_java_syntax.clj  d2_java_syslib.clj  d3_java_condense.clj  d4_java_string.clj  d_annotate_return.clj  java1_syntax.clj  java2_syslib.clj  java3_condense.clj  java4_string.clj  java_ast.clj  java_condense.clj  java_string.clj
test/clj_icu_test/: common_test.clj  core_test.clj  cpp_test.clj  java_test.clj
test/kalai/: common_test.clj  compile_test.clj  core_test.clj  exp.clj  normalize_test.clj  placation.clj  test_helpers.clj  unconstrianed_test.clj
(+125 files in other folders)
