[package]
name = "demo_01"
version = "0.1.0"
authors = [
    "Elango Cheran <elango.cheran@gmail.com>",
    "Timothy Pratley <timothypratley@gmail.com>"]
edition = "2018"

[[bin]]
name = "demo_01"
path = "src/a/demo_01.rs"

[[bin]]
name = "demo_02"
path = "src/a/demo_02.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
