[package]
name = "examples"
version = "0.1.0"
authors = [
    "Elango Cheran <elango.cheran@gmail.com>",
    "Timothy Pratley <timothypratley@gmail.com>"]
edition = "2018"


[[bin]]
name = "run_examples"
path = "src_bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "examples"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
rpds = "0.11.0"
