[package]
name = "sql_builder"
version = "0.1.0"
authors = [
    "Elango Cheran <elango.cheran@gmail.com>",
    "Timothy Pratley <timothypratley@gmail.com>"]
edition = "2018"

[[bin]]
name = "sql_builder_run_examples"
path = "src_bin/main.rs"

[lib]
name = "sql_builder"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rpds = "0.11.0"
